--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "swiper": "^8.4.4",
+    "tinycolor2": "^1.4.2",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
