--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lighten-darken-color": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
